[gd_scene load_steps=3 format=3 uid="uid://bwxu68o36aorq"]

[ext_resource type="Script" path="res://Levels/Pause.gd" id="1_2r5yk"]
[ext_resource type="Texture2D" path="res://Levels/sprites/bg2.png" id="2_lemb8"]

[node name="PauseScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2r5yk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lemb8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "PAUSED"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="MenuButton2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Menu"

[connection signal="button_down" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MenuButton2" to="." method="_on_menu_button_button_down"]
